# Quincy-and-Ryan-Code

./: infrared.cpp  rsESPreceiverHWtimer.cpp  rsESPrecevierTEST.cpp  rsESPsenderHWtimer.cpp  rsPlatformIOreceiver.cpp  rsPlatformIOsender.cpp  rsRMTsenderTEST.cpp  rsplatformIOreceiver.cpp  sender.cpp
main/: CMakeLists.txt  SoundManager.cpp  SoundManager.hpp  game_logic.cpp  game_logic.h  idf_component.yml  main.cpp
